--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,7 +18,7 @@
 @import "gm_team";
 @import "player_riddle";
 @import "player_login";
-
+@import "admin_screen";
 // Global CSS
 body{
   font-size: 1rem;
