--- a/resources/sass/admin_screen.scss
+++ b/resources/sass/admin_screen.scss
@@ -2,9 +2,10 @@
   border: 1px solid #F9C11C;
   background-color: #FBE192;
   padding: 12px;
-  margin: auto auto 20px;
   width: 20rem;
   overflow:auto;
+  margin-bottom: 20px;
+  border-radius: 5px 5px 5px 5px;
   input{
     margin-top: 5px;
     margin-bottom: 5px;
@@ -19,4 +20,19 @@
   .current-riddle-disable-cb{
     opacity: 0.4;
   }
+  .current-riddle-post-msg{
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding : 5px;
+    border : 1px solid #F9C11C;
+    background-color: white;
+    opacity: 0.7;
+    text-align : left;
+  }
+}
+#add-GM, #mod-riddles, #reinit-base{
+  .card-admin{
+    margin: auto auto 20px;
+  }
+
 }
