--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,7 @@
 @import "player_riddle";
 @import "player_login";
 @import "admin_screen";
+@import "mod_parcour";
 // Global CSS
 body{
   font-size: 1rem;
