--- a/resources/sass/messenger.scss
+++ b/resources/sass/messenger.scss
@@ -26,7 +26,7 @@ $msg_other_bg: $gray;
 
 .message.self {
   .content {
-    background-color: $msg_self_bg;
+    background-color: $darkGray;
     color: white;
   }
 
