add : error message when connexion fails

--- a/resources/sass/player_login.scss
+++ b/resources/sass/player_login.scss
@@ -81,7 +81,7 @@
 
     // looks
     background-color: $darkGray;
-    //padding: 1.125em 1.5em;
+    padding: 1.125em 1.5em;
     font-size: 0.8em;
     border-radius: 1em;
     box-shadow:	0 0.125em 0.5em rgba(0, 0, 0, .3), 0 0.0625em 0.125em rgba(0, 0, 0, .2);
