page de fin : redirection complete et contenu

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@
 @import "player_login";
 @import "admin_screen";
 @import "mod_parcour";
+@import "endPage";
 // Global CSS
 body{
   font-size: 1rem;
