--- a/resources/sass/player_riddle.scss
+++ b/resources/sass/player_riddle.scss
@@ -12,3 +12,17 @@
   text-align: right;
   padding: 0 10px;
 }
+
+#myProgress {
+  width: 60%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 0%;
+  height: 30px;
+  background-color: #00FF00;
+  text-align: center;
+  line-height: 30px;
+  color: blue;
+}
