first look on the final draft

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,7 +24,7 @@ $lightGray: #e3e9ec;
 $mediumGray :#b7c6cf;
 $darkGray: #4c5356;
 $darkBlue: #182949;
-
+$blueWriting: #182949;
 /*Gris clair (fond) : #e3e9ec
 Gris moyen :  #b7c6cf
 Gris foncé : #4c5356
