--- a/resources/sass/player_riddle.scss
+++ b/resources/sass/player_riddle.scss
@@ -13,16 +13,17 @@
   padding: 0 10px;
 }
 
+/*
 #myProgress {
   width: 60%;
-  background-color: #ddd;
+  background-color: $lightGray;
 }
 
 #myBar {
   width: 0%;
   height: 30px;
-  background-color: #00FF00;
+  background-color: $yellowBorder;
   text-align: center;
   line-height: 30px;
   color: blue;
-}
+}*/
