--- a/resources/sass/endPage.scss
+++ b/resources/sass/endPage.scss
@@ -1,14 +1,20 @@
 
 
 div#endContent{
+	position : relative;
 	vertical-align: top;
-    display: inline;
+    display: block;
     text-align: center;
-    width: 100%
+    width: 100%;
+	
 }
-img {
-    margin-right : 10%;
-	margin-left : 10%;
+img#victory {
+	display:block;
+	position : absolute;
+	top : 0%;
+	left:0%;
+	width : 100%;
+	height: 70%;
 	z-index : -1;
    
 }
@@ -18,9 +24,13 @@ img {
 
   .endMessage{
     // layout
+	position : absolute;
+	top : 60%;
+	left : 55%;
+	display:block;
+	//margin-left:auto;
+	//margin-right : auto;
     max-width: 30em;
-	position :relative;
-	bottom : 50%;
     // looks
     background-color: $darkGray;
     padding: 1.125em 1.5em;
