--- a/resources/sass/player_login.scss
+++ b/resources/sass/player_login.scss
@@ -2,6 +2,7 @@
   @include media-breakpoint-down(md) {
     margin-left: 2rem;
     margin-right: 2rem;
+    padding-bottom : 2rem;
   }
 
   @include media-breakpoint-up(sm) {
@@ -137,5 +138,8 @@
     filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, .1));
   }
 
+    #goButton{
+        word-spacing: 3px !important;
+    }
 
 }
