--- a/resources/sass/endPage.scss
+++ b/resources/sass/endPage.scss
@@ -5,18 +5,18 @@ div#endContent{
 	vertical-align: top;
     display: block;
     text-align: center;
-    width: 100%;
+	max-width:100%;
+	height:auto;
 	
 }
 img#victory {
 	display:block;
 	position : absolute;
-	top : 0%;
-	left:0%;
-	width : 100%;
-	height: 70%;
+	max-width:100%;
+	height:auto;
 	z-index : -1;
-   
+	object-fit: contain;
+
 }
 
 
@@ -38,8 +38,21 @@ img#victory {
     border-radius: 1rem;
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
     color: white;
-   
-
   }
 
+.endMessage::before {
+	// layout
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 0;
+	bottom: 100%;
+	left: 1.5em; // offset should move with padding of parent
+	border: .75rem solid transparent;
+	border-top: none;
+
+	// looks
+	border-bottom-color: $darkGray;
+	filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, .1));
+}
 
