--- a/resources/sass/admin_screen.scss
+++ b/resources/sass/admin_screen.scss
@@ -30,9 +30,16 @@
     text-align : left;
   }
 }
-#add-GM, #mod-riddles, #reinit-base{
+#add-GM,#mod-riddles, #reinit-base{
   .card-admin{
     margin: auto auto 20px;
+  }
+}
+#mod-riddles{
+  display : flex;
+  flex-wrap: wrap;
+  .card-admin{
+    margin: 10px auto;
   }
 
 }
