footer+negative values in timer+icon in tabs + some changes

--- a/resources/sass/tabs.scss
+++ b/resources/sass/tabs.scss
@@ -9,17 +9,23 @@
 }
 
 .tabs {
-  background-color: white !important;
+  background-color: $lightGray !important;
   .nav a {
-    background: $lightGray ;
+    background: $lightGray !important;
     color: $darkGray ;
     border:solid 2px $darkGray !important;
 
   }
 
+  .jumbotron
+  {
+    background-color: $lightGray !important;
+  }
 
   .nav {
     margin-bottom: 0rem;
+    background: $lightGray !important;
+
 
   }
 
