all the small changes asked for

--- a/resources/sass/player_login.scss
+++ b/resources/sass/player_login.scss
@@ -87,6 +87,7 @@
     border-radius: 1em;
     box-shadow:	0 0.125em 0.5em rgba(0, 0, 0, .3), 0 0.0625em 0.125em rgba(0, 0, 0, .2);
     color: white;
+    margin-left: 27% !important;
 
   }
 
