--- a/resources/sass/mod_parcour.scss
+++ b/resources/sass/mod_parcour.scss
@@ -5,28 +5,60 @@
 
 
   .riddle-list {
-    width : 22rem;
     border: 0px;
     border-radius: 5px 5px 0px 0px;
-    //border-top : 0px;
-    //border : 1px solid #bbb;
     margin-left: 10px;
   }
   .riddle-list li{
-    width : 22rem;
     padding : 1rem;
     list-style: none;
-    background: $gray;
     border : 0px;
     text-align: center;
   }
 
   .riddle-list li:first-child{
-    background: #36c;
+    background-color: #36c;
     color:white;
     border:none;
     border-radius: 5px 5px 0px 0px;
   }
+
+  .mod-line-li{
+    max-width: 50rem;
+    display : flex;
+    flex-direction: row;
+    padding-bottom : 10px;
+    border : 2px solid white;
+    background-color: white;
+    .lvl-nbr-header{
+      border-radius: 5px 0px 0px 5px;
+      padding : 20px;
+      text-align: center;
+      background-color: $gray;
+      border : 2px solid white;
+    }
+    .mod-line-content {
+      display : flex;
+      flex-wrap: wrap;
+      padding: 1px 1px 10px;
+      background-color: $gray;
+      border : 2px solid white;
+      border-radius: 0px 5px 5px 0px;
+      .card-admin {
+        margin: 10px 10px auto 10px;
+      }
+      .btn-add-riddle{
+        width : 4rem;
+        height: 4rem;
+        border: 1px solid #F9C11C;
+        background-color: #FBE192;
+        border-radius: 5px 5px 5px 5px;
+        text-align: center;
+        margin : 10px;
+      }
+    }
+  }
+
 
   #header-mod-parcours{
     background: white;
@@ -40,7 +72,6 @@
   border: 1px solid #F9C11C;
   background-color: $green;
   border-radius: 5px 5px 5px 5px;
-  width : 20rem;
-  height: 3rem;
-  margin : 5px;
+  width : 3rem;
+  margin: 10px 10px 0px 10px;
 }
