--- a/resources/sass/mod_parcour.scss
+++ b/resources/sass/mod_parcour.scss
@@ -70,6 +70,17 @@
   }
 }
 
+
+.mod-parcour-container{
+  position: relative;
+  #add-mod-riddles-node{
+    position : absolute;
+    top : 10px;
+    left : 0;
+    right : 0;
+    margin: 0 auto;
+  }
+}
 #drag-over-shadow{
   border: 1px solid #F9C11C;
   background-color: $green;
